[tool.poetry]
name = "arb_con"
version = "0.1.0"
description = "Practica en clase de conexion a Solidity"
authors = ["danielmontesalejandres <danielmontesalejandres@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^7.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
